fixed layout bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,12 +5,14 @@
 html, body {
   height: 100%;
   background-color: #ecf0f1;
+  margin-bottom: 100px;
 }
 .wrapper {
   min-height: 100%;
   height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
   height: 100%;
   margin: 0 auto -135px; /* the bottom margin is the negative value of the footer's height */
+  margin-bottom: 100px;
 }
 
 .footer {
